--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -5,7 +5,7 @@
 
 <body>
    <%- include('../includes/navigation.ejs') %>
-
+<!-- now all my push should be working -->
     <main>
         <form class="product-form" action="/admin/<% if (editing) { %>edit-product<% } else { %>add-product<% } %>" method="POST">
             <div class="form-control">
